# wave-prim

./: .gitignore  CMakeLists.txt  LICENSE  README.md  requirements.txt
.github/workflows/: ci.yml
bench/: benchmark.py
host/: device_query.cpp  gemm.cpp  reduce.cpp  scan.cpp  sort.cpp
include/waveprim/: gemm.h  reduce.h  scan.h  sort.h
kernels/: gemm.cl  reduce.cl  scan.cl  sort.cl
reference/: gemm.py  reduce.py  scan.py  sort.py
tests/: conftest.py  test_framework.py  test_gemm.py  test_infrastructure.py  test_reduce.py  test_scan.py  test_sort.py
tests/framework/: __init__.py  backend.py  runner.py  tolerance.py
